<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:title_text="@string/status"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_areal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:title_text="@string/areal"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_population"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/population"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_cause_of_extinction"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/cause_of_extinction"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_scientific_value"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/scientific_value"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/animal_morphological_features"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/morphological_features"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/plant_growing_conditions"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/growing_conditions"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/plant_biomorphological_characteristics"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/biomorphological_characteristics"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_security_measures"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/security_measures"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_breeding"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/breeding"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_commercial_value"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:title_text="@string/commercial_value"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

    <hakobastvatsatryan.DropdownTextView
        android:id="@+id/organism_sources"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:title_text="@string/sources"
        app:title_text_color="@android:color/black"
        app:title_font="@font/proxima_nova_regular"
        app:underline_link="true"
        app:content_font="@font/proxima_nova_regular"
        app:bg_drawable_regular="@drawable/bg_dropdown_text_view_regular"
        app:bg_drawable_expanded="@drawable/bg_dropdown_text_view_expanded"
        app:panel_padding="10dp"/>

</LinearLayout>